crates/corral-client/src/snapshots/corral_client__presentation__tests__a_discovered_session_corral_cannot_verify_renders_honestly.snap
---
source: crates/corral-client/src/presentation_tests.rs
assertion_line: 411
expression: "rendered(&external(\"unknown\", None))"
---
Runtime unverified · Status unknown
  Running outside Corral
  Status is limited until new activity arrives from this session.
  Screen unavailable
  [open refused] Screen unavailable
