crates/corral-client/src/snapshots/corral_client__presentation__tests__a_discovered_session_without_identity_renders_honestly.snap
---
source: crates/corral-client/src/presentation_tests.rs
assertion_line: 396
expression: "rendered(&external(\"running\", None))"
---
Running · Status unknown
  Running outside Corral
  Status is limited until new activity arrives from this session.
  Screen unavailable
  [open refused] Screen unavailable
