crates/corral-client/src/snapshots/corral_client__presentation__tests__a_history_row_renders_its_origin_and_age_and_nothing_it_cannot_know.snap
---
source: crates/corral-client/src/presentation_tests.rs
expression: "rendered(&history_row(\"claude\", 0))"
---
Status unknown
  Found in Claude history
  Last active 16m ago
  Screen unavailable
  [open refused] Screen unavailable
