crates/corral-client/src/snapshots/corral_client__presentation__tests__a_rotted_claim_renders_unknown_with_the_last_known_fact.snap
---
source: crates/corral-client/src/presentation_tests.rs
expression: rendered(&item)
---
Running · Status unknown
  Last known: Needed input 16m ago
