crates/corral-client/src/snapshots/corral_client__presentation__tests__a_session_that_needs_you_renders_the_state_alone.snap
---
source: crates/corral-client/src/presentation_tests.rs
expression: "rendered(&attended(AttentionWireState::NeedsYou, Vec::new()))"
---
Needs You
