crates/corral-client/src/snapshots/corral_client__presentation__tests__an_exit_under_a_pending_request_renders_the_disclosure.snap
---
source: crates/corral-client/src/presentation_tests.rs
expression: rendered(&item)
---
Exited
  Exited before you responded
